--- a/pemrograman-data-analisis/catatan-keuangan.ipynb
+++ b/pemrograman-data-analisis/catatan-keuangan.ipynb
@@ -41,7 +41,8 @@
     }
    ],
    "source": [
-    "df = pd.read_excel(\"catatan_keuangan.xlsx\", sheet_name=\"Sheet1\", parse_dates=[\"Tanggal\"])\n",
+    "url = \"https://github.com/MAROON-LABKOM/script-praktikum/blob/master/pemrograman-data-analisis/catatan_keuangan.xlsx?raw=true\"\n",
+    "df = pd.read_excel(url, sheet_name=\"Sheet1\", parse_dates=[\"Tanggal\"])\n",
     "df.info()"
    ]
   },
