--- a/pemrograman-data-analisis/segmentasi-rfm.ipynb
+++ b/pemrograman-data-analisis/segmentasi-rfm.ipynb
@@ -26,10 +26,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_orders = pd.read_excel(\"northwind_db.xlsx\", sheet_name=\"orders\")\n",
-    "df_orders_details = pd.read_excel(\"northwind_db.xlsx\", sheet_name=\"order_details\")\n",
-    "df_products = pd.read_excel(\"northwind_db.xlsx\", sheet_name=\"products\")\n",
-    "df_customers = pd.read_excel(\"northwind_db.xlsx\", sheet_name=\"customers\")"
+    "url = \"https://github.com/MAROON-LABKOM/script-praktikum/blob/master/pemrograman-data-analisis/northwind_db.xlsx?raw=true\"\n",
+    "\n",
+    "df_products = pd.read_excel(url, sheet_name=\"products\")\n",
+    "df_customers = pd.read_excel(url, sheet_name=\"customers\")\n",
+    "df_orders = pd.read_excel(url, sheet_name=\"orders\")\n",
+    "df_orders_details = pd.read_excel(url, sheet_name=\"order_details\")"
    ]
   },
   {
